--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "motion": "^12.4.7",
-    "next": "^15.3.1",
+    "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
